Bug 1645512 - Make nsAbLDAPProcessReplicationData handle failures which occur before LDAP bind completes. r=mkmelin DONTBUILD